--- a/css/sass/_screen_768.scss
+++ b/css/sass/_screen_768.scss
@@ -287,3 +287,6 @@ div#search-container {
         }
     }   
 
+.exhibit-items img {
+    max-width: 150px;
+}
