--- a/css/style.css
+++ b/css/style.css
@@ -1337,12 +1337,7 @@ th {
     line-height: 24px;
     margin-bottom: 1.5em;
   }
-  .exhibit-block .exhibit-items {
-    max-width: 30%;
-  }
   .exhibit-block .exhibit-items img {
-    /*border: 1px solid $link-accent;*/
-    max-width: 150px;
     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.2);
   }
   .exhibit-block p {
@@ -1796,6 +1791,10 @@ th {
     margin-right: 1.69492%;
     display: inline;
     clear: left;
+  }
+
+  .exhibit-items img {
+    max-width: 150px;
   }
 }
 @media screen and (min-width: 1080px) {
